--- a/terminal/debian.desktop
+++ b/terminal/debian.desktop
@@ -1,28 +1,11 @@
 [Desktop Entry]
-
-# The type as listed above
 Type=Application
-
-# The version of the desktop entry specification to which this file complies
 Version=1.0
-
-# The name of the application
 Name=Debian
-
-# A comment which can/will be used as a tooltip
+GenericName=Debian GNU/Linux
 Comment=Debian subsystem
-
-# The path to the folder in which the executable is run
 Path=/usr/lib/sulin/dsl
-
-# The executable of the application, possibly with arguments.
 Exec=/usr/bin/d-term pkexec /usr/lib/sulin/dsl/dsl.sh
-
-# The name of the icon that will be used to display this entry
 Icon=/usr/lib/sulin/dsl/debian.svg
-
-# Describes whether this application needs to be run in a terminal or not
 Terminal=false
-
-# Describes the categories in which this entry should be shown
 Categories=System;
