debian-xdg-open added

--- a/Xsession/debian-xdg.desktop
+++ b/Xsession/debian-xdg.desktop
@@ -3,9 +3,10 @@ Type=Application
 Version=1.0
 Name=Debian
 GenericName=Debian GNU/Linux
-Comment=Debian subsystem
+Comment=Open with debian subsystem xdg-open
 Path=/usr/lib/sulin/dsl
-Exec=debian-terminal
+Exec=debian-xdg-open %U
 Icon=/usr/lib/sulin/dsl/debian.svg
 Terminal=false
-Categories=System;
+NoDisplay=true
+MimeType=application/*;
