add arch support (experimental)

--- a/debian.conf
+++ b/debian.conf
@@ -15,3 +15,8 @@
 #DESTDIR=/var/devuan
 #DIST=stable
 #REPO=https://pkgmaster.devuan.org/merged/
+#
+##Archlinux defaults (experamintal support):
+#DESTDIR=/var/archlinux
+#DIST=arch
+#REPO=https://mirrors.edge.kernel.org/archlinux
