config file replaced with ini file

--- a/debian.conf
+++ b/debian.conf
@@ -1,22 +1,25 @@
 ### Debian subsystem config
-#
-#
-##Debian defaults:
-#DESTDIR=/var/debian
-#DIST=stable
-#REPO=https://deb.debian.org/debian
-#
-##Ubuntu defaults (for 16.04):
-#DESTDIR=/var/ubuntu
-#DIST=xenial
-#REPO=http://archive.ubuntu.com/ubuntu
-#
-##Devuan defaults:
-#DESTDIR=/var/devuan
-#DIST=stable
-#REPO=https://pkgmaster.devuan.org/merged/
-#
-##Archlinux defaults (experamintal support):
-#DESTDIR=/var/archlinux
-#DIST=arch
-#REPO=https://mirrors.edge.kernel.org/archlinux
+[default]
+system=debian
+pidone=true
+updates=true
+
+[debian]
+DESTDIR=/var/debian
+DIST=stable
+REPO=https://deb.debian.org/debian
+
+[ubuntu]
+DESTDIR=/var/ubuntu
+DIST=xenial
+REPO=http://archive.ubuntu.com/ubuntu
+
+[devuan]
+DESTDIR=/var/devuan
+DIST=stable
+REPO=https://pkgmaster.devuan.org/merged/
+
+[archlinux]
+DESTDIR=/var/archlinux
+DIST=arch
+REPO=http://mirrors.edge.kernel.org/archlinux
