--- a/utils/Makefile
+++ b/utils/Makefile
@@ -7,3 +7,4 @@ clean:
 install:
 	mkdir -p $(DESTDIR)/usr/bin/ || true
 	install pidone $(DESTDIR)/usr/bin/
+	install ini_parser.sh $(DESTDIR)/usr/bin/iniparser
