kali linux config

--- a/debian.conf
+++ b/debian.conf
@@ -23,3 +23,8 @@ REPO=https://pkgmaster.devuan.org/merged/
 DESTDIR=/var/archlinux
 DIST=arch
 REPO=http://mirrors.edge.kernel.org/archlinux
+
+[kali]
+DESTDIR=/var/kali
+DIST=kali-rolling
+REPO=https://http.kali.org/kali/
