--- a/utils/Makefile
+++ b/utils/Makefile
@@ -1,10 +1,11 @@
 build:
 	gcc pidone.c -o pidone -static
+	gcc iniparser.c -o iniparser -static
 
 clean:
-	rm -f pidone
+	rm -f pidone iniparser
 
 install:
 	mkdir -p $(DESTDIR)/usr/bin/ || true
 	install pidone $(DESTDIR)/usr/bin/
-	install ini_parser.sh $(DESTDIR)/usr/bin/iniparser
+	install iniparser $(DESTDIR)/usr/bin/iniparser
