--- a/debian.conf
+++ b/debian.conf
@@ -1,6 +1,6 @@
 ### Debian subsystem config
 [default]
-system=debian
+system=alpine
 pidone=true
 updates=true
 
@@ -28,3 +28,8 @@ REPO=http://mirrors.edge.kernel.org/archlinux
 DESTDIR=/var/kali
 DIST=kali-rolling
 REPO=https://http.kali.org/kali/
+
+[alpine]
+DESTDIR=/var/alpine
+DIST=alpine
+REPO=http://dl-cdn.alpinelinux.org/alpine/latest-stable/
