sulin subsystem support added

--- a/debian.conf
+++ b/debian.conf
@@ -33,3 +33,8 @@ REPO=https://http.kali.org/kali/
 DESTDIR=/var/alpine
 DIST=alpine
 REPO=http://dl-cdn.alpinelinux.org/alpine/latest-stable/
+
+[sulin]
+DESTDIR=/var/sulin
+DIST=sulin
+REPO=https://master.dl.sourceforge.net/project/sulinos/SulinRepository/inary-index.xml.xz
