replace su with login for sulin

--- a/debian.conf
+++ b/debian.conf
@@ -29,6 +29,16 @@ DESTDIR=/var/kali
 DIST=kali-rolling
 REPO=https://http.kali.org/kali/
 
+[parrot]
+DESTDIR=/var/parrot
+DIST=rolling
+REPO=https://deb.parrot.sh/parrot/
+
+[pardus]
+DESTDIR=/var/pardus
+DIST=ondokuz
+REPO=https://depo.pardus.org.tr/pardus/
+
 [alpine]
 DESTDIR=/var/alpine
 DIST=alpine
