gentoo support added (stage3)

--- a/debian.conf
+++ b/debian.conf
@@ -48,3 +48,8 @@ REPO=http://dl-cdn.alpinelinux.org/alpine/latest-stable/
 DESTDIR=/var/sulin
 DIST=sulin
 REPO=https://master.dl.sourceforge.net/project/sulinos/SulinRepository/inary-index.xml.xz
+
+[gentoo]
+DESTDIR=/var/gentoo
+DIST=gentoo
+REPO=https://mirrors.evowise.com/gentoo/ https://mirrors.lug.mtu.edu/gentoo/
