desktop entry sync added

--- a/debian.conf
+++ b/debian.conf
@@ -38,7 +38,7 @@ REPO=https://deb.parrot.sh/parrot/
 
 [pardus]
 DESTDIR=/var/pardus
-DIST=ondokuz
+DIST=yirmibir
 REPO=https://depo.pardus.org.tr/pardus/
 
 [alpine]
