--- a/terminal/Makefile
+++ b/terminal/Makefile
@@ -1,2 +1,4 @@
 build:
 	which valac && valac --pkg gtk+-3.0 --pkg vte-2.91 --enable-deprecated d-term.vala -o d-term -X -O3 -X -s -X -Wno-deprecated-declarations
+clean:
+	rm -f d-term || true
