--- a/utils/Makefile
+++ b/utils/Makefile
@@ -1,6 +1,7 @@
 build:
 	gcc pidone.c -o pidone -static
 	gcc iniparser.c -o iniparser -static
+	chmod u+s pidone || true
 
 clean:
 	rm -f pidone iniparser
