--- a/debian.conf
+++ b/debian.conf
@@ -42,6 +42,16 @@ DESTDIR=/var/pardus
 DIST=yirmibir
 REPO=https://depo.pardus.org.tr/pardus/
 
+[pardus-ondokuz]
+DESTDIR=/var/pardus
+DIST=ondokuz
+REPO=https://depo.pardus.org.tr/pardus/
+
+[etap]
+DESTDIR=/var/pardus
+DIST=stable
+REPO=https://depo.pardus.org.tr/etap/
+
 [alpine]
 DESTDIR=/var/alpine
 DIST=alpine
