ubuntu config latest codemange finder

--- a/debian.conf
+++ b/debian.conf
@@ -14,7 +14,7 @@ REPO=https://deb.debian.org/debian
 
 [ubuntu]
 DESTDIR=/var/ubuntu
-DIST=xenial
+DIST=ubuntu-latest
 REPO=http://archive.ubuntu.com/ubuntu
 
 [devuan]
