replace arch-bootstrap with archstrap

--- a/debian.conf
+++ b/debian.conf
@@ -26,7 +26,7 @@ REPO=https://pkgmaster.devuan.org/merged/
 [archlinux]
 DESTDIR=/var/archlinux
 DIST=arch
-REPO=http://mirrors.edge.kernel.org/archlinux
+REPO=http://mirrors.edge.kernel.org/archlinux/$repo/os/$arch
 
 [kali]
 DESTDIR=/var/kali
