--- a/debian.conf
+++ b/debian.conf
@@ -28,6 +28,11 @@ DESTDIR=/var/archlinux
 DIST=arch
 REPO=http://mirrors.edge.kernel.org/archlinux/$repo/os/$arch
 
+[manjaro]
+DESTDIR=/var/manjaro
+DIST=arch
+REPO=https://mirrors.fossho.st/manjaro/stable/$repo/$arch
+
 [kali]
 DESTDIR=/var/kali
 DIST=kali-rolling
