fix extractor ar

--- a/debian.conf
+++ b/debian.conf
@@ -58,6 +58,11 @@ DESTDIR=/var/pardus
 DIST=stable
 REPO=https://depo.pardus.org.tr/etap/
 
+[mxlinux]
+DESTDIR=/var/mxlinux
+DIST=bullseye
+REPO=http://mxrepo.com/mx/repo
+
 [alpine]
 DESTDIR=/var/alpine
 DIST=alpine
