voidlinux support added

--- a/debian.conf
+++ b/debian.conf
@@ -73,6 +73,11 @@ DESTDIR=/var/sulin
 DIST=sulin
 REPO=https://master.dl.sourceforge.net/project/sulinos/SulinRepository/inary-index.xml.xz
 
+[voidlinux]
+DESTDIR=/var/voidlinux
+DIST=void
+REPO=https://alpha.de.repo.voidlinux.org/current
+
 [gentoo]
 DESTDIR=/var/gentoo
 DIST=gentoo
