--- a/terminal/d-term.desktop
+++ b/terminal/d-term.desktop
@@ -14,7 +14,7 @@ Comment=create d-term from host system
 
 
 # The executable of the application, possibly with arguments.
-Exec=/bin/bash -c "echo /usr/lib/sulin/dsl/d-term > /tmp/hostctl"
+Exec=/bin/hostctl /usr/lib/sulin/dsl/d-term
 
 # The name of the icon that will be used to display this entry
 Icon=terminal
