--- a/debian.conf
+++ b/debian.conf
@@ -4,6 +4,7 @@ system=debian
 pidone=true
 colorize=true
 updates=false
+block_camera=false
 common_home=true
 bind_system=true
 force_permissive=true
