--- a/debian/control
+++ b/debian/control
@@ -2,12 +2,16 @@ Source: debian-subsystem
 Section: utils
 Priority: optional
 Maintainer: Ali Riza KESKIN <parduscix@yandex.ru>
-Build-Depends: make, gcc
+Build-Depends: make,
+               gcc,
+               valac,
+               gobject-introspection, 
+               libvte-2.91-dev
 Standards-Version: 4.3.0
 Homepage: https://gitlab.com/sulincix/debian-subsystem
 
 Package: debian-subsystem
 Architecture: all
-Depends: ${misc:Depends}, libc6, xz-utils, zstd, busybox
+Depends: ${misc:Depends}, ${shlibs:Depends}, libc6, xz-utils, zstd, busybox
 Description: Edit me
  Edit me. I am description
