rules file rewritten

--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,11 @@ Homepage: https://gitlab.com/sulincix/debian-subsystem
 
 Package: debian-subsystem
 Architecture: all
-Depends: ${misc:Depends}, ${shlibs:Depends}, libc6, xz-utils, zstd, busybox
-Description: Edit me
- Edit me. I am description
+Depends: ${misc:Depends}, ${shlibs:Depends}, libc6,
+          xz-utils,
+          zstd,
+          libvte-2.91-0,
+          busybox-static,
+          wget
+Description: Debian subsystem for linux
+ Easy way use debian chroot on own distribution
