--- a/debian/rules
+++ b/debian/rules
@@ -1,10 +1,12 @@
-#!/usr/bin/make -f
-
-clean:
-	dh clean
-build:
-	make
-	make install DESTDIR=debian/debian-subsystem
-	make fix-debian DESTDIR=debian/debian-subsystem
-binary:
-	dh binary
+#!/usr/bin/perl
+if ( $ARGV[0] eq "build" ) {
+    system("make");
+    system("make install DESTDIR=debian/debian-subsystem");
+    system("make fix-debian DESTDIR=debian/debian-subsystem");
+}
+if ( $ARGV[0] eq "clean" ) {
+    system("dh clean");
+}
+if ( $ARGV[0] eq "binary" ) {
+    system("dh binary");
+}
