/dev isolation added

--- a/debian.conf
+++ b/debian.conf
@@ -7,6 +7,7 @@ updates=false
 block_camera=false
 common_home=true
 bind_system=true
+isolate_dev=true
 force_permissive=true
 common_flatpak=true
 use_bwrap=false
