default config fix

--- a/debian.conf
+++ b/debian.conf
@@ -7,7 +7,7 @@ updates=false
 block_camera=false
 common_home=true
 bind_system=true
-isolate_dev=true
+isolate_dev=false
 force_permissive=true
 common_flatpak=true
 use_bwrap=false
@@ -15,6 +15,16 @@ use_bwrap=false
 [debian]
 DESTDIR=/var/debian
 DIST=stable
+REPO=https://deb.debian.org/debian
+
+[debian-testing]
+DESTDIR=/var/debian
+DIST=testing
+REPO=https://deb.debian.org/debian
+
+[debian-unstable]
+DESTDIR=/var/debian
+DIST=unstable
 REPO=https://deb.debian.org/debian
 
 [ubuntu]
@@ -61,11 +71,6 @@ REPO=https://depo.pardus.org.tr/pardus/
 DESTDIR=/var/pardus
 DIST=stable
 REPO=https://depo.pardus.org.tr/etap/
-
-[mxlinux]
-DESTDIR=/var/mxlinux
-DIST=bullseye
-REPO=http://mxrepo.com/mx/repo
 
 [alpine]
 DESTDIR=/var/alpine
