dont use hardcoded icon

--- a/Xsession/debian-session.desktop
+++ b/Xsession/debian-session.desktop
@@ -3,7 +3,7 @@ Name=Debian
 Comment=Debian subsystem session
 Exec=/usr/bin/debian-session
 TryExec=/usr/bin/debian-session
-Icon=/usr/lib/sulin/dsl/debian.svg
+Icon=debian-logo
 Type=Application
 X-Ubuntu-Gettext-Domain=debian
 X-GNOME-Provides=debian
