debian testing and unstable destdir

--- a/debian.conf
+++ b/debian.conf
@@ -18,12 +18,12 @@ DIST=stable
 REPO=https://deb.debian.org/debian
 
 [debian-testing]
-DESTDIR=/var/debian
+DESTDIR=/var/debian-testing
 DIST=testing
 REPO=https://deb.debian.org/debian
 
 [debian-unstable]
-DESTDIR=/var/debian
+DESTDIR=/var/debian-unstable
 DIST=unstable
 REPO=https://deb.debian.org/debian
 
