fix conflict for debian

--- a/debian/rules
+++ b/debian/rules
@@ -3,6 +3,7 @@ if ( $ARGV[0] eq "build" ) {
     system("make");
     system("make install DESTDIR=debian/debian-subsystem");
     system("make fix-debian DESTDIR=debian/debian-subsystem");
+    system("rm -f debian/debian-subsystem/usr/share/desktop-directories/");
 }
 if ( $ARGV[0] eq "clean" ) {
     system("dh clean");
