busybox distro added

--- a/debian.conf
+++ b/debian.conf
@@ -91,3 +91,8 @@ REPO=https://alpha.de.repo.voidlinux.org/current
 DESTDIR=/var/gentoo
 DIST=gentoo
 REPO=https://mirrors.evowise.com/gentoo/ https://mirrors.lug.mtu.edu/gentoo/
+
+[busybox]
+DESTDIR=/var/busybox
+DIST=busybox
+REPO=https://deb.debian.org/debian/pool/main/b/busybox/
