--- a/core/Makefile
+++ b/core/Makefile
@@ -1,4 +1,4 @@
 build:
-	gcc debrun.c -o debrun -static -O3 -s -Wno-unused-result
+	gcc debrun.c -o debrun -static -O3 -s -Wno-unused-result -g
 clean:
 	rm -f debrun
