cgroup isolation drop and C99

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -1,6 +1,6 @@
 build:
-	gcc pidone.c -o pidone -static
-	gcc iniparser.c -o iniparser -static
+	gcc -std=c99 pidone.c -o pidone -static
+	gcc -std=c99 iniparser.c -o iniparser -static
 	chmod u+s pidone || true
 
 clean:
