--- a/polkit/Makefile
+++ b/polkit/Makefile
@@ -1,5 +1,5 @@
 build:
-	gcc main.c -o pkexec-fake -static
+	gcc -std=c99 main.c -o pkexec-fake -static
 	chmod u+s pkexec-fake
 clean:
 	rm -f pkexec-fake
