--- a/core/Makefile
+++ b/core/Makefile
@@ -1,4 +1,4 @@
 build:
-	gcc -std=c99 -I/usr/include -I/usr/include/linux debrun.c -o debrun -static -O3 -s -Wno-unused-result -g
+	gcc -std=c99 debrun.c -o debrun -static -O3 -s -Wno-unused-result -g
 clean:
 	rm -f debrun
