--- a/debian.conf
+++ b/debian.conf
@@ -96,3 +96,8 @@ REPO=https://mirrors.evowise.com/gentoo/ https://mirrors.lug.mtu.edu/gentoo/
 DESTDIR=/var/busybox
 DIST=busybox
 REPO=https://deb.debian.org/debian/pool/main/b/busybox/
+
+[fedora]
+DESTDIR=/var/fedora
+DIST=fedora
+REPO=https://kojipkgs.fedoraproject.org/packages/Fedora-Container-Base
