--- a/debian.conf
+++ b/debian.conf
@@ -13,91 +13,101 @@ common_flatpak=true
 use_bwrap=false
 
 [debian]
-DESTDIR=/var/debian
+DESTDIR=/var//lib/subsystem/debian
 DIST=stable
 REPO=https://deb.debian.org/debian
 
 [debian-testing]
-DESTDIR=/var/debian-testing
+DESTDIR=/var//lib/subsystem/debian-testing
 DIST=testing
 REPO=https://deb.debian.org/debian
 
 [debian-unstable]
-DESTDIR=/var/debian-unstable
+DESTDIR=/var//lib/subsystem/debian-unstable
 DIST=unstable
 REPO=https://deb.debian.org/debian
 
 [ubuntu]
-DESTDIR=/var/ubuntu
+DESTDIR=/var//lib/subsystem/ubuntu
 DIST=ubuntu-latest
 REPO=http://archive.ubuntu.com/ubuntu
 
 [devuan]
-DESTDIR=/var/devuan
+DESTDIR=/var//lib/subsystem/devuan
 DIST=stable
 REPO=https://pkgmaster.devuan.org/merged/
 
+[devuan-testing]
+DESTDIR=/var//lib/subsystem/devuan
+DIST=testing
+REPO=https://pkgmaster.devuan.org/merged/
+
 [archlinux]
-DESTDIR=/var/archlinux
+DESTDIR=/var//lib/subsystem/archlinux
 DIST=arch
 REPO=http://mirrors.edge.kernel.org/archlinux/$repo/os/$arch
 
 [manjaro]
-DESTDIR=/var/manjaro
+DESTDIR=/var//lib/subsystem/manjaro
 DIST=arch
 REPO=https://mirrors.fossho.st/manjaro/stable/$repo/$arch
 
 [kali]
-DESTDIR=/var/kali
+DESTDIR=/var//lib/subsystem/kali
 DIST=kali-rolling
 REPO=https://http.kali.org/kali/
 
 [parrot]
-DESTDIR=/var/parrot
+DESTDIR=/var//lib/subsystem/parrot
 DIST=rolling
 REPO=https://deb.parrot.sh/parrot/
 
 [pardus]
-DESTDIR=/var/pardus
+DESTDIR=/var//lib/subsystem/pardus
 DIST=yirmibir
 REPO=https://depo.pardus.org.tr/pardus/
 
 [pardus-ondokuz]
-DESTDIR=/var/pardus
+DESTDIR=/var//lib/subsystem/pardus
 DIST=ondokuz
 REPO=https://depo.pardus.org.tr/pardus/
 
 [etap]
-DESTDIR=/var/pardus
+DESTDIR=/var//lib/subsystem/pardus
 DIST=stable
 REPO=https://depo.pardus.org.tr/etap/
 
 [alpine]
-DESTDIR=/var/alpine
+DESTDIR=/var//lib/subsystem/alpine
 DIST=alpine
 REPO=http://dl-cdn.alpinelinux.org/alpine/latest-stable/
 
+[alpine-edge]
+DESTDIR=/var//lib/subsystem/alpine
+DIST=alpine
+REPO=http://dl-cdn.alpinelinux.org/alpine/edge/
+
 [sulin]
-DESTDIR=/var/sulin
+DESTDIR=/var//lib/subsystem/sulin
 DIST=sulin
 REPO=https://master.dl.sourceforge.net/project/sulinos/SulinRepository/inary-index.xml.xz
 
 [voidlinux]
-DESTDIR=/var/voidlinux
+DESTDIR=/var//lib/subsystem/voidlinux
 DIST=void
 REPO=https://alpha.de.repo.voidlinux.org/current
 
 [gentoo]
-DESTDIR=/var/gentoo
+DESTDIR=/var//lib/subsystem/gentoo
 DIST=gentoo
 REPO=https://mirrors.evowise.com/gentoo/ https://mirrors.lug.mtu.edu/gentoo/
 
 [busybox]
-DESTDIR=/var/busybox
+DESTDIR=/var//lib/subsystem/busybox
 DIST=busybox
 REPO=https://deb.debian.org/debian/pool/main/b/busybox/
 
 [fedora]
-DESTDIR=/var/fedora
+DESTDIR=/var//lib/subsystem/fedora
 DIST=fedora
 REPO=https://kojipkgs.fedoraproject.org/packages/Fedora-Container-Base
