--- a/data/lsl.env
+++ b/data/lsl.env
@@ -1,6 +1,6 @@
 #!/bin/sh
 if [ -z "$XDG_DATA_DIRS" ]; then
-    export XDG_DATA_DIRS=/debian/var/lib/lsl/exports
+    export XDG_DATA_DIRS=/usr/share:/usr/local/share:/debian/var/lib/lsl/exports
 else
     export XDG_DATA_DIRS=${XDG_DATA_DIRS}:/debian/var/lib/lsl/exports
 fi
