sync desktop on profile.d and xinitrc

--- a/data/lsl.env
+++ b/data/lsl.env
@@ -1,4 +1,5 @@
 #!/bin/sh
+lsl true
 if [ -z "$XDG_DATA_DIRS" ]; then
     export XDG_DATA_DIRS=/usr/share:/usr/local/share:/var/lib/subsystem/var/lib/lsl/exports:/var/lib/lsl/imports/
 else
