--- a/debian/rules
+++ b/debian/rules
@@ -6,4 +6,7 @@ DEB_BUILD_OPTIONS=nostrip
 	dh $@
 
 override_dh_auto_build:
-	make CFLAGS=-DNODLOPEN
+	make CFLAGS=-DNODLOPEN -DNOUNBIND
+
+override_dh_auto_install:
+	make install DISTRO=archlinux
