--- a/distro/archlinux/lsl.desktop
+++ b/distro/archlinux/lsl.desktop
@@ -4,5 +4,5 @@ Comment=Enter Archlinux subsystem terminal
 Exec=/bin/lsl /bin/bash
 Terminal=true
 Type=Application
-Icon=subsystem
+Icon=subsystem-archlinux
 Categories=System;
