--- a/distro/debian/lsl-root.desktop
+++ b/distro/debian/lsl-root.desktop
@@ -4,5 +4,5 @@ Comment=Enter Debian subsystem terminal as root
 Exec=pkexec /bin/lsl /bin/bash
 Terminal=true
 Type=Application
-Icon=subsystem
+Icon=subsystem-debian
 Categories=System;
