--- a/data/lsl.env
+++ b/data/lsl.env
@@ -1,7 +1,12 @@
 #!/bin/sh
-lsl true
 if [ -z "$XDG_DATA_DIRS" ]; then
     export XDG_DATA_DIRS=/usr/share:/usr/local/share:/var/lib/subsystem/var/lib/lsl/exports:/var/lib/lsl/imports/
 else
     export XDG_DATA_DIRS=${XDG_DATA_DIRS}:/var/lib/subsystem/var/lib/lsl/exports:/var/lib/lsl/imports/
+fi
+
+if [ -z "$XDG_CONFIG_DIRS" ]; then
+    export XDG_CONFIG_DIRS=/etc/xdg:/var/lib/subsystem/etc/xdg
+else
+    export XDG_CONFIG_DIRS=${XDG_CONFIG_DIRS}:/var/lib/subsystem/etc/xdg
 fi
